--- a/trafic-cop-status/rma.html
+++ b/trafic-cop-status/rma.html
@@ -484,42 +484,52 @@
                             <label for="Phone">Phone</label><input id="Phone" type="text" class="Phone">
                         </div>
                         <div class="input-container">
-                            <label for="faxNumber">Fax Number</label><input id="faxNumber" type="text" class="faxNumber">
+                            <label for="faxNumber">Fax Number</label><input id="faxNumber" type="text"
+                                                                            class="faxNumber">
                         </div>
                     </div>
                     <div class="shipping-information">
                         <h4>shipping information</h4>
-                        <input id="same-info" type="checkbox"> <label for="same-info"> Check if shipping info is the same</label>
+                        <input id="same-info" type="checkbox"> <label for="same-info"> Check if shipping info is the
+                        same</label>
                         <div class="input-container">
-                            <label for="si-contactName">Contact Name <span class="blue-star">*</span></label><input id="si-contactName" type="text"
-                                                                                class="contactName">
+                            <label for="si-contactName">Contact Name <span class="blue-star">*</span></label><input
+                                id="si-contactName" type="text"
+                                class="contactName">
                         </div>
                         <div class="input-container">
-                            <label for="si-companyName">Company Name <span class="blue-star">*</span></label><input id="si-companyName" type="text"
-                                                                                class="companyName">
+                            <label for="si-companyName">Company Name <span class="blue-star">*</span></label><input
+                                id="si-companyName" type="text"
+                                class="companyName">
                         </div>
                         <a href="#" class="blue-question">What this is?</a>
                         <div class="input-container">
                             <label for="si-companyName2">Company Name 2</label><input id="si-companyName2" type="text"
-                                                                                                                    class="companyName">
+                                                                                      class="companyName">
                         </div>
                         <div class="input-container">
-                            <label for="si-companyAddress">Company Address <span class="blue-star">*</span></label><input id="si-companyAddress" type="text"
-                                                                                      class="companyAddress">
+                            <label for="si-companyAddress">Company Address <span
+                                    class="blue-star">*</span></label><input id="si-companyAddress" type="text"
+                                                                             class="companyAddress">
                         </div>
                         <div class="input-container">
-                            <label for="si-companyAddress2">Company Address 2</label><input id="si-companyAddress2" type="text"
-                                                                                                                          class="companyAddress">
+                            <label for="si-companyAddress2">Company Address 2</label><input id="si-companyAddress2"
+                                                                                            type="text"
+                                                                                            class="companyAddress">
                         </div>
                         <div class="input-container">
-                            <label for="si-City">City <span class="blue-star">*</span></label><input id="si-City" type="text" class="City">
+                            <label for="si-City">City <span class="blue-star">*</span></label><input id="si-City"
+                                                                                                     type="text"
+                                                                                                     class="City">
                         </div>
                         <div class="input-container">
-                            <label for="si-StateProvinceRegion">State Province Region <span class="blue-star">*</span></label><input
+                            <label for="si-StateProvinceRegion">State Province Region <span
+                                    class="blue-star">*</span></label><input
                                 id="si-StateProvinceRegion" type="text" class="StateProvinceRegion">
                         </div>
                         <div class="input-container half-width">
-                            <label for="si-zipCode">ZIP Code <span class="blue-star">*</span></label><input id="si-zipCode" type="text" class="zipCode">
+                            <label for="si-zipCode">ZIP Code <span class="blue-star">*</span></label><input
+                                id="si-zipCode" type="text" class="zipCode">
                         </div>
                         <div class="input-container">
                             <label for="si-Country">Country <span class="blue-star">*</span></label>
@@ -782,7 +792,6 @@
                         </div>
 
 
-
                     </div>
                 </div>
                 <div class="progress-rma-step2-content-buttons-block">
@@ -802,8 +811,9 @@
                         <h4>Product information(* Required)</h4>
 
                         <div class="input-container">
-                            <label class="input-date" for="purchaseDate">Purchase Date</label><input id="purchaseDate" type="text"
-                                                                                class="purchaseDate">
+                            <label class="input-date" for="purchaseDate">Purchase Date</label><input id="purchaseDate"
+                                                                                                     type="text"
+                                                                                                     class="purchaseDate">
                         </div>
                         <div class="input-container">
                             <label for="productType">Product Type</label><input id="productType" type="text"
@@ -811,16 +821,18 @@
                         </div>
                         <div class="input-container">
                             <label for="partNumber">Part Number</label><input id="partNumber" type="text"
-                                                                                      class="partNumber">
+                                                                              class="partNumber">
                         </div>
                         <div class="input-container">
-                            <label for="serialNumber">Serial Number</label><input id="serialNumber" type="text" class="serialNumber">
+                            <label for="serialNumber">Serial Number</label><input id="serialNumber" type="text"
+                                                                                  class="serialNumber">
                         </div>
                         <div class="input-container">
                             <label for="Options">Options</label><input id="Options" type="text" class="Options">
                         </div>
                         <div class="input-container">
-                            <label for="SCGManagerContracted">SCG Manager Contracted</label><input id="SCGManagerContracted" type="text" class="SCGManagerContracted">
+                            <label for="SCGManagerContracted">SCG Manager Contracted</label><input
+                                id="SCGManagerContracted" type="text" class="SCGManagerContracted">
                         </div>
                         <div class="input-container">
                             <label for="PONumber">PO Number</label>
@@ -831,19 +843,21 @@
                         </div>
                         <div class="product-information-buttons-block">
                             <label class="uploadbutton ">
-                                <div class="button black-btn" >Choose Files</div>
+                                <div class="button black-btn">Choose Files</div>
                                 <span class='input-file-text noFileChoose'>No File Choose</span>
-                                <input class="input-file hide" type="file" />
+                                <input class="input-file hide" type="file"/>
                             </label>
                             <button class="transparent-button">Attach a P.O.</button>
                             <button class="transparent-button">Remove a P.O.</button>
                             <input type="text">
                         </div>
                         <div class="input-container">
-                            <label for="todaysDate">today's Date</label><input placeholder="24.05.2018" id="todaysDate" type="text" class="todaysDate">
+                            <label for="todaysDate">today's Date</label><input placeholder="24.05.2018" id="todaysDate"
+                                                                               type="text" class="todaysDate">
                         </div>
                         <div class="input-container">
-                            <label for="problemDescription">Problem Description</label><textarea id="problemDescription" class="problemDescription"></textarea>
+                            <label for="problemDescription">Problem Description</label><textarea id="problemDescription"
+                                                                                                 class="problemDescription"></textarea>
                         </div>
                     </div>
                     <div class="fallure-information">
@@ -855,7 +869,8 @@
                         </div>
                         <div class="input-container">
                             <p class="step3-question">Communication failure?</p>
-                            <input name="Communication" id="CommunicationYes" type="radio"><label for="CommunicationYes">Yes</label>
+                            <input name="Communication" id="CommunicationYes" type="radio"><label
+                                for="CommunicationYes">Yes</label>
                             <input name="Communication" id="CommunicationNo" type="radio"><label for="CommunicationNo">No</label>
                         </div>
                         <div class="input-container">
@@ -866,7 +881,8 @@
                         <div class="input-container">
                             <p class="step3-question">Intermittent failure?</p>
                             <input name="Intermittent" id="IntermittentYes" type="radio"><label for="IntermittentYes">Yes</label>
-                            <input name="Intermittent" id="IntermittentNo" type="radio"><label for="IntermittentNo">No</label>
+                            <input name="Intermittent" id="IntermittentNo" type="radio"><label
+                                for="IntermittentNo">No</label>
                         </div>
                         <div class="input-container">
                             <p class="step3-question">Dead on arrival?</p>
@@ -879,24 +895,27 @@
                             <input name="Consent" id="ConsentNo" type="radio"><label for="ConsentNo">No</label>
                         </div>
                         <div class="input-container">
-                            <p class="step3-question">Expedite process 3-5 days from receipt is subjected to a $100-$500 free</p>
+                            <p class="step3-question">Expedite process 3-5 days from receipt is subjected to a $100-$500
+                                free</p>
                             <input name="Expedite" id="ExpediteYes" type="radio"><label for="ExpediteYes">Yes</label>
                             <input name="Expedite" id="ExpediteNo" type="radio"><label for="ExpediteNo">No</label>
                         </div>
                         <div class="product-information-buttons-block">
                             <h4>Upload image(s) or files:</h4>
-                            <p class="noFileChoose">Note: Do not disasseble product to take photo, or warranty will be voided.</p>
+                            <p class="noFileChoose">Note: Do not disasseble product to take photo, or warranty will be
+                                voided.</p>
 
                             <label class="uploadbutton ">
-                                <div class="button black-btn" >Choose Files</div>
+                                <div class="button black-btn">Choose Files</div>
                                 <span class='input-file-text noFileChoose'>No File Choose</span>
-                                <input class="input-file hide" type="file" />
+                                <input class="input-file hide" type="file"/>
                             </label>
                             <button class="transparent-button">Attach a P.O.</button>
                             <button class="transparent-button">Remove a P.O.</button>
                         </div>
                         <div class="input-container Description-textarea">
-                            <label for="Description">Description</label><textarea id="Description" class="problemDescription"></textarea>
+                            <label for="Description">Description</label><textarea id="Description"
+                                                                                  class="problemDescription"></textarea>
                         </div>
                     </div>
                 </div>
@@ -905,7 +924,63 @@
                     <button class="next">Next</button>
                 </div>
             </div>
-            <div class="steps-content progress-rma-step4-content hide">4</div>
+            <div class="steps-content progress-rma-step4-content hide">
+                <h4>Your order request</h4>
+                <div class="ugp-table rma-confirm-table">
+                    <div class="search-company">
+                        <h6>Items</h6> <a class="show_all" href="#">Show all order items</a>
+                        <div class="ugp-table-container">
+                            <div class="table-head ugp-table-head">
+                                <div class="col1">Product Name</div>
+                                <div class="col2">SKU</div>
+                                <div class="col3">Qty</div>
+                                <div class="col4">Qty to Return</div>
+                                <div class="col5">Reason to Return</div>
+                                <div class="col6">Item Condition</div>
+                                <div class="col7">Resolution</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="col1">
+                                    <div class="product-name">Iris Worckout top</div>
+                                    <div class="product-inf">(Size: XS, Color: Red)</div>
+                                </div>
+                                <div class="col2">WS03-XS-Red</div>
+                                <div class="col3">
+                                    <div class="qty-Stock">Stock <input type="number" min="0"></div>
+                                    <div class="qty-Ordered">Ordered <input type="number" min="0"></div>
+                                    <div class="qty-Avaible">Avaible <input type="number" min="0"></div>
+                                </div>
+                                <div class="col4">
+                                    <input class="qty-return" type="number"  min="0">
+                                </div>
+                                <div class="col5">
+                                    <select name="returnReason" id="returnReason">
+                                        <option value="Wrong color">Wrong color</option>
+                                        <option value="">qwqweqwwe</option>
+                                    </select>
+                                </div>
+                                <div class="col6">
+                                    <select name="itemCondition" id="itemCondition">
+                                        <option value="Damaged">Damaged</option>
+                                        <option value="">qwqweqwwe</option>
+                                    </select>
+                                </div>
+                                <div class="col7">
+                                    <select name="Resolution" id="Resolution">
+                                        <option value="Store Credit">Store Credit</option>
+                                        <option value="">qwqweqwwe</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="mobile-separator"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-rma-step2-content-buttons-block">
+                    <button class="back">Back</button>
+                    <button class="next">Next</button>
+                </div>
+            </div>
             <div class="steps-content progress-rma-step5-content hide">5</div>
         </div>
     </div>
@@ -987,7 +1062,6 @@
     });
 
 
-
     jQuery('.back').click(function () {
         jQuery(this).parents().find('.steps-content:not(.hide)').addClass('hide').prev(".steps-content").removeClass('hide');
         jQuery(this).parents().find('.progress-rma .rma-step-active').removeClass('rma-step-active').prev().addClass('rma-step-active');
@@ -998,8 +1072,8 @@
     });
 
 
-    (function() {
-        $('.uploadbutton').on('change', '.input-file', function(event) {
+    (function () {
+        $('.uploadbutton').on('change', '.input-file', function (event) {
             $(this).siblings('.input-file-text').html(this.value);
         });
 
