--- a/trafic-cop-status/user-groups-permissions.html
+++ b/trafic-cop-status/user-groups-permissions.html
@@ -213,7 +213,7 @@
                     <div class="table-head ugp-table-head">
                         <div class="col1"></div>
                         <div class="col2">Last Name</div>
-                        <div class="col3">First Namete</div>
+                        <div class="col3">First Name</div>
                         <div class="col4">State</div>
                         <div class="col5">City</div>
                         <div class="col6">Company</div>
