--- a/trafic-cop-status/rma.html
+++ b/trafic-cop-status/rma.html
@@ -981,7 +981,36 @@
                     <button class="next">Next</button>
                 </div>
             </div>
-            <div class="steps-content progress-rma-step5-content hide">5</div>
+            <div class="steps-content progress-rma-step5-content hide">
+                <div class="request-completed">
+                    <i class="fas fa-check"></i>
+                    <div class="request-completed-violet-text">request completed</div>
+                    <p>Your request is accepted and processed, follow the progress of work in your account</p>
+                    <button class="report-btn">Go to report</button>
+                </div>
+
+
+
+
+                <div class="rma-confirm-table request-detail-table">
+                    <div class="search-company">
+                        <div class="ugp-table-container">
+                            <div class="table-head ugp-table-head">
+                                <div class="col1">Request-details</div>
+                                <div class="col2">Information</div>
+                                <div class="col3">Status</div>
+                            </div>
+                            <div class="table-row">
+                                <div class="col1">
+                                    <div class="request-detail-img"><img src="img/profile-picture.png" alt=""></div>
+                                    <div class="request-detail-number">#474747718488</div>
+                                </div>
+                                <div class="col2">Crushed</div>
+                                <div class="col3">On progress</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="col-sm-12 col-lg-12 col-md-12 col-xs-12 right-block">
