--- a/trafic-cop-status/FTP-folder.html
+++ b/trafic-cop-status/FTP-folder.html
@@ -432,6 +432,147 @@
                         </div>
                     </div>
                 </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="grid-item" style="background-image: url(img/rush.png)">
+                    <div class="grid-item-head">
+                        <input type="checkbox"><i data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                                  class="dropdown-toggle fas fa-ellipsis-h"></i>
+                    </div>
+                    <a class="link" href="#"></a>
+                    <div class="grid-item-footer">
+                        <div class="grid-item-footer-information">
+                            <div class="grid-item-name">Rush big poster.png</div>
+                            <div class="grid-item-inf">
+                                <div class="grid-item-inf-size">60.047 kb</div>
+                                <div class="grid-item-inf-format">.esp</div>
+                                <i class="fas fa-paperclip"></i>
+                            </div>
+                        </div>
+                        <div class="grid-item-fold">
+                            <a href="#"><img src="img/SWBfolder.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
