--- a/trafic-cop-status/pinsnotes.html
+++ b/trafic-cop-status/pinsnotes.html
@@ -150,7 +150,7 @@
                     <li class="nav-item">
                         <a href="#" class="notifications"><img src="img/notifications.png" alt="">
                             <div class="notifications-point"></div>
-                            Pins & Notes</a>
+                            Notifications</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="folder"><img src="img/Folder-Checkout.png" alt=""> folder
@@ -166,7 +166,7 @@
 
     <div class="col-sm-10 col-lg-10 col-md-10 col-xs-12 main-block main-block-sidebar-open">
         <div class="row main-block-header">
-            <h1>Notifications</h1>
+            <h1>Pins & Notes</h1>
         </div>
         <div class="main-table">
             <div class="main-table-left">
